--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h3 {
         
          <p>I am a freshman at Bob Jones University studying History, working towards being a teacher.</p>
          <p>
-            I enjoy participating all kinds of sporting events, and I am active in my local church: CornerStone Biblen Church of Denver,PA.  I am an usher during services
+            I enjoy participating all kinds of sporting events, and I am active in my local church: Cornerstone Bible Church of Denver,PA.  I am an usher during services
          <p>
             I also enjoy video games and books
          </p>
